--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
+
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
@@ -30,6 +31,7 @@
 .pub-cache/
 .pub/
 /build/
+/android/app/src/main/AndroidManifest.xml
 
 # Web related
 lib/generated_plugin_registrant.dart
